# linear-cli

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md
.github/: dependabot.yml
benches/: command_paths.rs  formatters.rs  write_operations.rs
crates/linear-queries/: Cargo.toml
crates/linear-queries/src/: lib.rs
crates/linear-queries/tests/: query_tests.rs
crates/linear-schema/: Cargo.toml  build.rs
crates/linear-schema/src/: lib.rs
crates/linear-schema/tests/: compile_test.rs
src/: cli.rs  error.rs  lib.rs  main.rs
tests/: auth_formatting_tests.rs  auth_login_tests.rs  auth_logout_tests.rs  auth_status_tests.rs  auth_token_tests.rs  cli_structure_tests.rs  comment_delete_command_tests.rs  comment_formatting_tests.rs  comment_list_formatting_tests.rs  cycle_current_tests.rs  cycle_formatting_tests.rs  cycle_list_formatting_tests.rs  delete_mutation_tests.rs  discovery_query_tests.rs  error_tests.rs  issue_comment_add_cli_tests.rs  issue_comment_add_command_tests.rs  issue_comment_add_mutation_tests.rs  issue_create_cli_tests.rs  issue_create_command_tests.rs  issue_create_mutation_tests.rs  issue_delete_command_tests.rs  issue_formatting_tests.rs  issue_lifecycle_cli_tests.rs  issue_lifecycle_command_tests.rs  issue_lifecycle_mutation_tests.rs  issue_list_command_tests.rs  issue_list_formatting_tests.rs  issue_query_serialization_tests.rs  issue_reference_resolver_tests.rs  issue_relation_cli_tests.rs  issue_relation_command_tests.rs  issue_relation_mutation_tests.rs  issue_search_command_tests.rs  issue_search_formatting_tests.rs  issue_update_cli_tests.rs  issue_update_command_tests.rs  issue_update_mutation_tests.rs  issue_view_command_tests.rs  (+37 more)
(+83 files in other folders)
