[workspace]
members = [".", "crates/linear-schema", "crates/linear-queries"]

[package]
name = "linear-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.13", features = ["json", "blocking"] }
keyring = { version = "3.6", features = ["apple-native", "sync-secret-service", "windows-native"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
secrecy = "0.10"
anyhow = "1.0"
thiserror = "2.0"
rpassword = "7.3"
cynic = { version = "3.12", features = ["http-reqwest-blocking", "rkyv"] }
linear-queries = { path = "crates/linear-queries" }
csv = "1.3"
comfy-table = "7.1"

[dev-dependencies]
mockito = "1.7"
serial_test = "3.2"
tempfile = "3.23"
assert_cmd = "2.1"
predicates = "3.1"
criterion = "0.8"

[[bench]]
name = "formatters"
harness = false

[[bench]]
name = "write_operations"
harness = false

[[bench]]
name = "command_paths"
harness = false
